--- a/serviceConsumer/src/main/resources/application.properties
+++ b/serviceConsumer/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 server.port=9090
-spring.application.name=serviceConsumer
+spring.application.name=service-consumer
 
 eureka.client.register-with-eureka=false
 eureka.client.registry-fetch-interval-seconds=10
